@startuml "MarvelHeros Architecture"

node "App" as App {
    folder "Lifecycle Screen" {
        [ViewController]
        [Interactor]
        [Presenter]
        [RemoteWorker]
        [PersistenceWorker]
        [Router]

        [ViewController]..>[Interactor]
        [ViewController]..>[Router]
        [Interactor]..>[Presenter]
        [Presenter]..>[ViewController]
        [Interactor]..>[RemoteWorker]
        [Interactor]..>[PersistenceWorker]
    }

    node "Service" as Service {
        interface PersistenceService
        interface RemoteService
    }

    node "Storage" as Storage {
        [PersistenceDataAdapter]
        [StorageHeroRepository]

        [PersistenceDataAdapter]..>[StorageHeroRepository]
    }

    node "Networking" as Networking {
        [HeroDataAdapter]
        interface APIRequest
        [APIController]

        [HeroDataAdapter] ..> APIRequest
        APIRequest -- [APIController]
    }

    database "Disk" {
        [HeroDataModel]
    }

    [RemoteWorker]..>[RemoteService]
    [PersistenceWorker]..>[PersistenceService]
    PersistenceService -- [PersistenceDataAdapter]
    RemoteService -- [HeroDataAdapter]
    [StorageHeroRepository] ..> [HeroDataModel]
    [APIController] ..> HTTP
}

@enduml